# FurredEngine

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflow/: tests.yml
.github/workflows/: tests.yml
cmake/: glad.cmake  glfw.cmake
include/FurredEngine/: export.h  exports.h  gl.h  math.h  vector.h  window.h
src/: CMakeLists.txt  math.c  vector.c  window.c
tests/: CMakeLists.txt  vector.c  window.c
